--- a/table3.html
+++ b/table3.html
@@ -23,6 +23,12 @@
                 <td>Engineering</td>
             </tr>
 
+            <tr>
+                <th>Course</th>
+                <td>Full stack</td>
+                <td>Engineering</td>
+            </tr>
+
         </table>
 
 
